View Online: -> next page <- previous page TODO: F5 check for new chapters, last updated last read

--- a/Mija Reader/AdditionalControls/SearchTextBox.xaml
+++ b/Mija Reader/AdditionalControls/SearchTextBox.xaml
@@ -26,7 +26,7 @@
            Text="{Binding ElementName=Root, Path=Watermark}"
            VerticalAlignment="Center"
            TextWrapping="Wrap"
-           TextAlignment="Center">
+           TextAlignment="Left">
             <TextBlock.Visibility>
                 <MultiBinding Converter="{StaticResource ShadowConvert}">
                     <Binding ElementName="textBox" Path="Text"/>
